Lagt til ny bashrc for coreos med miljøvariabler for etcd

--- a/roles/coreos_bootstrap/tasks/main.yml
+++ b/roles/coreos_bootstrap/tasks/main.yml
@@ -24,3 +24,8 @@
   become: yes
   timezone:
     name: "{{ timezone }}"
+
+- name: Add simple bashrc
+  template:
+    src: "{{ role_path }}/templates/bashrc.j2"
+    dest: /home/deployer/.bashrc
