--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -13,8 +13,8 @@
   - name: Ensure cluster is healthy
     shell: "{{ install_dir }}/bin/etcdctl cluster-health | tail -n1"
     environment:
-      - ETCDCTL_CERT_FILE: /etc/ssl/etcd/etcd.pem
-      - ETCDCTL_KEY_FILE: /etc/ssl/etcd/etcd-key.pem
+      - ETCDCTL_CERT_FILE: /etc/ssl/etcd/etcd-client.pem
+      - ETCDCTL_KEY_FILE: /etc/ssl/etcd/etcd-client-key.pem
       - ETCDCTL_CA_FILE: /etc/ssl/etcd/ca.pem
     register: etcd_health_status
     failed_when: etcd_health_status.stdout != "cluster is healthy"
