Henter ned kube-proxy sertifikater, hvis de finnes

--- a/roles/fetch_existing_certificates/tasks/main.yml
+++ b/roles/fetch_existing_certificates/tasks/main.yml
@@ -13,6 +13,8 @@
     - admin-key.pem
     - front-proxy-client.pem
     - front-proxy-client-key.pem
+    - kube-proxy.pem
+    - kube-proxy-key.pem
   vars:
     src_path: /etc/kubernetes/pki
     dest_path: target/pki
