--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -22,6 +22,7 @@
   become: yes
   roles:
   -  { role: proxy, when: nais_http_proxy is defined }
+  - logs
   tasks:
   - name: Add systemd unit to fix issue 32728 (symlinks in /sys)
     copy:
