Added etcd configuration for updates and masking of locksmithd for all other nodes

--- a/roles/update-engine/tasks/main.yaml
+++ b/roles/update-engine/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Set environment variables for update-engine
   template:
-    src: "{{ role_path }}/templates/update-engine-envs.conf"
+    src: "{{ role_path }}/templates/update-engine-envs.conf.j2"
     dest: /etc/systemd/system/update-engine.service.d/30-default-envs.conf
   notify:
     - Restart update-engine
