--- a/roles/prometheus/templates/prometheus.service
+++ b/roles/prometheus/templates/prometheus.service
@@ -4,6 +4,7 @@ Description=Prometheus
 [Service]
 User=prometheus
 ExecStart=/opt/prometheus/prometheus --config.file /opt/prometheus/prometheus.yml --storage.tsdb.path=/data/prometheus --storage.tsdb.retention={{ prometheus.retention }}
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
