--- a/roles/prometheus/vars/main.yaml
+++ b/roles/prometheus/vars/main.yaml
@@ -2,3 +2,13 @@ prometheus:
   version: 2.7.0
   checksum: sha256:960848f9c2ffb2ce6f295dd0bc7186acd1ac12e74a90a1a9a9fbab0a838f8472
   retention: 4w
+prometheus_jobs:
+  - kubernetes-apiservers
+  - kubernetes-cadvisor
+  - kubernetes-nodes
+  - kubernetes-pods
+  - kubernetes-service-endpoints
+  - kubernetes-services
+  - prometheus
+  - prometheus-pushgateway
+  - black box scraping of ingresses
