--- a/roles/node_exporter/files/node_exporter.service
+++ b/roles/node_exporter/files/node_exporter.service
@@ -4,6 +4,7 @@ Description=Node Exporter
 [Service]
 User=nobody
 ExecStart=/etc/node_exporter/node_exporter --no-collector.bcache --no-collector.bonding --no-collector.hwmon --no-collector.infiniband --no-collector.mdadm --no-collector.zfs --no-collector.xfs --collector.buddyinfo --collector.drbd --collector.interrupts --collector.mountstats --collector.processes --collector.qdisc --collector.systemd --web.listen-address=:9101
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
