Change to dictionary for vsphere vars.

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -119,13 +119,13 @@
   - create_certificates
   tasks:
   - name: Generate vsphere.conf
-    when: (vsphere_datastore is defined and vsphere_datacenter is defined and vsphere_network is defined and vsphere_resourcepool is defined)
+    when: vsphere is defined
     template:
       src: "templates/vsphere.conf.j2"
       dest: "target/vsphere.conf"
     vars:
-      vsphere_username: "{{ lookup('env', 'VSPHERE_USERNAME') }}"
-      vsphere_password: "{{ lookup('env', 'VSPHERE_PASSWORD') }}"
+      vsphere.username: "{{ lookup('env', 'VSPHERE_USERNAME') }}"
+      vsphere.password: "{{ lookup('env', 'VSPHERE_PASSWORD') }}"
 
 - hosts: etcd
   user: "{{ remote_user }}"
@@ -191,7 +191,7 @@
       - "-key.pem"
 
   - name: Copy vsphere.conf to master
-    when: (vsphere_datastore is defined and vsphere_datacenter is defined and vsphere_network is defined and vsphere_resourcepool is defined)
+    when: vsphere is defined
     copy:
       src: "target/vsphere.conf"
       dest: "/etc/kubernetes/vsphere.conf"
@@ -668,11 +668,11 @@
     changed_when: false
 
   - name: Copy vsphere-storageclass.yaml
-    when: (vsphere_datastore is defined and vsphere_datacenter is defined and vsphere_network is defined and vsphere_resourcepool is defined)
+    when: vsphere is defined
     template:
       src: "templates/vsphere-storageclass.yaml.j2"
       dest: "/tmp/vsphere-storageclass.yaml"
 
   - name: Apply vsphere storageclass
-    when: (vsphere_datastore is defined and vsphere_datacenter is defined and vsphere_network is defined and vsphere_resourcepool is defined)
+    when: vsphere is defined
     command: "{{ install_dir }}/bin/kubectl apply -f /tmp/vsphere-storageclass.yaml"
