--- a/roles/generate_kubeconfigs/tasks/main.yaml
+++ b/roles/generate_kubeconfigs/tasks/main.yaml
@@ -1,19 +1,15 @@
-- name: Delete kubelet.conf
-  file:
-    path: /etc/kubernetes/kubeconfigs/kubelet.conf
-    state: absent
-  changed_when: false
-
 - name: Generate kubelet kubeconfig
   shell: "{{ install_dir }}/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ groups.masters|first }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf &&
          {{ install_dir }}/bin/kubectl config set-credentials {{ cluster_name }}-kubelet --client-certificate=/etc/kubernetes/pki/kubelet.pem --client-key=/etc/kubernetes/pki/kubelet-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf &&
          {{ install_dir }}/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-kubelet --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf &&
          {{ install_dir }}/bin/kubectl config use-context {{ cluster_name }} --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf"
-  changed_when: false
+  args:
+    creates: /etc/kubernetes/kubeconfigs/kubelet.conf
 
 - name: Generate kube-proxy kubeconfig
   shell: "{{ install_dir }}/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ groups.masters|first }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/kube-proxy.conf &&
          {{ install_dir }}/bin/kubectl config set-credentials {{ cluster_name }}-kube-proxy --client-certificate=/etc/kubernetes/pki/kube-proxy.pem --client-key=/etc/kubernetes/pki/kube-proxy-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/kube-proxy.conf &&
          {{ install_dir }}/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-kube-proxy --kubeconfig=/etc/kubernetes/kubeconfigs/kube-proxy.conf &&
          {{ install_dir }}/bin/kubectl config use-context {{ cluster_name }} --kubeconfig=/etc/kubernetes/kubeconfigs/kube-proxy.conf"
-  changed_when: false
+  args:
+    creates: /etc/kubernetes/kubeconfigs/kube-proxy.conf
