--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -33,55 +33,64 @@
   shell: set -o pipefail && bin/cfssl gencert -initca target/pki/{{ item }}-csr.json | bin/cfssljson -bare target/pki/{{ item }}
   args:
     creates: target/pki/{{ item }}.pem
-    executeable: /usr/bin/bash
+    executable: /usr/bin/bash
   loop:
     - ca
     - front-proxy-ca
 
 - name: Creating admin certificate
-  shell: "bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client {{ role_path }}/files/admin-csr.json | bin/cfssljson -bare target/pki/admin"
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client {{ role_path }}/files/admin-csr.json | bin/cfssljson -bare target/pki/admin
   args:
+    executable: /usr/bin/bash
     creates: target/pki/admin.pem
 
 - name: Creating kube-proxy certificate
-  shell: "bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client {{ role_path }}/files/kube-proxy-csr.json | bin/cfssljson -bare target/pki/kube-proxy"
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client {{ role_path }}/files/kube-proxy-csr.json | bin/cfssljson -bare target/pki/kube-proxy
   args:
+    executable: /usr/bin/bash
     creates: target/pki/kube-proxy.pem
 
 - name: Creating kubelet certificates
-  shell: "bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/kubelet/{{ item.split('.')[0] }}-csr.json | bin/cfssljson -bare target/pki/kubelet/{{ item.split('.')[0] }}"
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/kubelet/{{ item.split('.')[0] }}-csr.json | bin/cfssljson -bare target/pki/kubelet/{{ item.split('.')[0] }}
   args:
+    executable: /usr/bin/bash
     creates: "target/pki/kubelet/{{ item.split('.')[0] }}.pem"
   loop: "{{ groups.all|flatten(levels=1) }}"
 
 - name: Creating kube apiserver certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/kube-apiserver-server-csr.json | bin/cfssljson -bare target/pki/kube-apiserver-server
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/kube-apiserver-server-csr.json | bin/cfssljson -bare target/pki/kube-apiserver-server
   args:
+    executable: /usr/bin/bash
     creates: target/pki/kube-apiserver-server.pem
 
 - name: Creating traefik certificate
-  shell: "bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server {{ role_path }}/files/traefik-csr.json | bin/cfssljson -bare target/pki/traefik"
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server {{ role_path }}/files/traefik-csr.json | bin/cfssljson -bare target/pki/traefik
   args:
+    executable: /usr/bin/bash
     creates: target/pki/traefik.pem
 
 - name: Creating front-proxy-client certificate
-  shell: "bin/cfssl gencert -ca=target/pki/front-proxy-ca.pem -ca-key=target/pki/front-proxy-ca-key.pem -config=target/pki/ca-config.json -profile=server {{ role_path }}/files/front-proxy-client-csr.json | bin/cfssljson -bare target/pki/front-proxy-client"
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/front-proxy-ca.pem -ca-key=target/pki/front-proxy-ca-key.pem -config=target/pki/ca-config.json -profile=server {{ role_path }}/files/front-proxy-client-csr.json | bin/cfssljson -bare target/pki/front-proxy-client
   args:
+    executable: /usr/bin/bash
     creates: target/pki/front-proxy-client.pem
 
 - name: Creating etcd certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/server
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/server
   args:
+    executable: /usr/bin/bash
     creates: target/pki/etcd/server.pem
 
 - name: Creating etcd client certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/etcd-client
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/etcd-client
   args:
+    executable: /usr/bin/bash
     creates: target/pki/etcd/etcd-client.pem
 
 - name: Creating etcd peer certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=peer target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/peer-{{ hostvars[item].inventory_hostname.split(".")[0] }}
+  shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=peer target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/peer-{{ hostvars[item].inventory_hostname.split(".")[0] }}
   args:
+    executable: /usr/bin/bash
     creates: target/pki/etcd/peer-{{ hostvars[item].inventory_hostname.split(".")[0] }}.pem
   loop: "{{ groups.etcd|flatten(levels=1) }}"
 
