--- a/test-playbook.yaml
+++ b/test-playbook.yaml
@@ -5,13 +5,17 @@
   become: yes
   tasks:
   - name: Ensure required processes is running
-    shell: /bin/pgrep etcd | wc -l
+    shell: set -o pipefail && /bin/pgrep etcd | wc -l
+    args:
+      executable: /usr/bin/bash
     register: etcd_process_count
     failed_when: etcd_process_count.stdout != "1"
     changed_when: false
 
   - name: Ensure cluster is healthy
-    shell: "{{ install_dir }}/bin/etcdctl cluster-health | tail -n1"
+    shell: set -o pipefail && {{ install_dir }}/bin/etcdctl cluster-health | tail -n1
+    args:
+      executable: /usr/bin/bash
     environment:
       - ETCDCTL_CERT_FILE: /etc/ssl/etcd/etcd-client.pem
       - ETCDCTL_KEY_FILE: /etc/ssl/etcd/etcd-client-key.pem
@@ -28,7 +32,9 @@
     K8S_HOST_COUNT: "{{ (groups['workers'] | length) + (groups['masters'] | length) }}"
   tasks:
     - name: Ensure required processes is running
-      shell: /bin/pgrep {{ item }} | wc -l
+      shell: set -o pipefail && /bin/pgrep {{ item }} | wc -l
+      args:
+        executable: /usr/bin/bash
       loop:
         - dockerd
         - kubelet
@@ -47,13 +53,17 @@
       changed_when: false
 
     - name: Verify that all nodes are in Ready-state
-      shell: "{{ install_dir }}/bin/kubectl get nodes | grep -iw 'Ready' | wc -l"
+      shell: set -o pipefail && {{ install_dir }}/bin/kubectl get nodes | grep -iw 'Ready' | wc -l
+      args:
+        executable: /usr/bin/bash
       register: ready_count
       failed_when: ready_count.stdout != "{{ K8S_HOST_COUNT }}"
       changed_when: false
 
     - name: Ensure addons are deployed and available
-      shell: "{{ install_dir }}/bin/kubectl -n kube-system get deploy {{ item }} -o json | grep availableReplicas | grep -v 0 | wc -l"
+      shell: set -o pipefail && {{ install_dir }}/bin/kubectl -n kube-system get deploy {{ item }} -o json | grep availableReplicas | grep -v 0 | wc -l
+      args:
+        executable: /usr/bin/bash
       loop:
         - coredns
         - tiller-deploy
@@ -70,7 +80,9 @@
   become: yes
   tasks:
     - name: Ensure required processes is running
-      shell: /bin/pgrep {{ item }} | wc -l
+      shell: set -o pipefail && /bin/pgrep {{ item }} | wc -l
+      args:
+        executable: /usr/bin/bash
       loop:
         - dockerd
         - kubelet
@@ -92,14 +104,18 @@
   become: yes
   tasks:
     - name: Ensure node taints are set
-      shell: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf describe no {{ inventory_hostname }} | grep '{{ item }}$' | wc -l "
+      shell: set -o pipefail && {{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf describe no {{ inventory_hostname }} | grep '{{ item }}$' | wc -l
+      args:
+        executable: /usr/bin/bash
       loop: "{{ node_taints|default([]) }}"
       register: matches_spec
       failed_when: matches_spec.stdout != "1"
       changed_when: false
 
     - name: Ensure node labels are set
-      shell: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf describe no {{ inventory_hostname }} | grep '{{ item }}$' | wc -l"
+      shell: set -o pipefail && {{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf describe no {{ inventory_hostname }} | grep '{{ item }}$' | wc -l
+      args:
+        executable: /usr/bin/bash
       loop: "{{ node_labels|default([]) }}"
       register: matches_spec
       failed_when: matches_spec.stdout != "1"
