--- a/roles/prometheus/templates/prometheus.service
+++ b/roles/prometheus/templates/prometheus.service
@@ -3,7 +3,7 @@ Description=Prometheus
 
 [Service]
 User=prometheus
-ExecStart=/opt/prometheus/prometheus --config.file /opt/prometheus/prometheus.yml --storage.tsdb.path=/data/prometheus --storage.tsdb.retention.time={{ prometheus.retention }} --query.timeout={{ prometheus.query.timeout }} --query.max-samples={{ prometheus.query.max_samples }} --web.external-url=https://{{ prometheus_host }}
+ExecStart=/opt/prometheus/prometheus --config.file /opt/prometheus/prometheus.yml --storage.tsdb.path=/data/prometheus --storage.tsdb.retention.time={{ prometheus_retention }} --query.timeout={{ prometheus.query.timeout }} --query.max-samples={{ prometheus.query.max_samples }} --web.external-url=https://{{ prometheus_host }}
 Restart=always
 
 [Install]
