--- a/roles/prometheus/vars/main.yaml
+++ b/roles/prometheus/vars/main.yaml
@@ -1,10 +1,11 @@
 prometheus:
   version: 2.7.1
   checksum: sha256:7837cfd6b5af63c07cadfa2b3118f0a43e43e8a6e6d596425cb23b45855b7db0
-  retention: 4w
   query:
     max_samples: 10000000
     timeout: 10s
+
+prometheus_retention: 4w
 
 prometheus_jobs:
   - kubernetes-apiservers
