Only generate kubelet certs for workers and masters.

--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -55,7 +55,7 @@
   args:
     executable: /usr/bin/bash
     creates: "target/pki/kubelet/{{ item.split('.')[0] }}.pem"
-  loop: "{{ groups.all|flatten(levels=1) }}"
+  loop: "{{ query('inventory_hostnames', 'workers:masters') }}"
 
 - name: Creating kube apiserver certificate
   shell: set -o pipefail && bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/kube-apiserver-server-csr.json | bin/cfssljson -bare target/pki/kube-apiserver-server
