added disk usage alert

--- a/roles/prometheus/handlers/main.yaml
+++ b/roles/prometheus/handlers/main.yaml
@@ -4,3 +4,8 @@
     state: restarted
     enabled: yes
     daemon_reload: yes
+
+- name: Reload prometheus
+  systemd:
+    name: prometheus
+    state: reloaded
