--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -1,7 +1,7 @@
 groups:
 - name: prometheus
   rules:
-  - alert: DiskUsage
+  - alert: PrometheusDiskUsage
     expr: 'predict_linear(node_filesystem_avail_bytes{instance="{{ inventory_hostname }}:9101"}[8h], 3*24*60*60) < 0'
     for: 2m
     labels:
@@ -9,4 +9,13 @@ groups:
       cluster: {{ cluster_name }}
     annotations:
       description: {{ "'<!subteam^SB8KS4WAV|nais-vakt> <!here> Prometheus is running low on disk space on {{ $labels.mountpoint }}, predicted empty in less than 3 days'" }}
-      action: "Increase disk space / adjust retention / check for applications having an excessive number of metrics"
+      action: "Cleanup / increase disk size / adjust retention / check for applications having an excessive number of metrics"
+  - alert: PrometheusDiskUsagePercent
+    expr: '100 * node_filesystem_avail_bytes{instance="{{ inventory_hostname }}:9101"} / node_filesystem_size_bytes{instance="{{ inventory_hostname }}:9101"} < 5'
+    for: 2m
+    labels:
+      team: aura
+      cluster: {{ cluster_name }}
+    annotations:
+      description: {{ "'<!subteam^SB8KS4WAV|nais-vakt> <!here> Less than 5% available disk space on {{ $labels.mountpoint }}'" }}
+      action: "Cleanup / increase disk size / adjust retention / check for applications having an excessive number of metrics"
