--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -3,7 +3,7 @@ groups:
   rules:
   - alert: PrometheusDiskUsage
     expr: 'predict_linear(node_filesystem_avail_bytes{instance="{{ inventory_hostname }}:9101"}[8h], 3*24*60*60) < 0'
-    for: 2m
+    for: 4h
     labels:
       team: aura
       cluster: {{ cluster_name }}
