--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -595,10 +595,16 @@
       state: directory
       path: /etc/kubernetes/roles
 
+  - name: get nameservers from resolv.conf
+    shell: grep nameserver /etc/resolv.conf | sed 's/nameserver //' | tr "\n" " " | sed -e 's/[[:space:]]*$//'
+    register: nameservers
+
   - name: Copy kubernetes-addons manifest templates
     template:
       src: "templates/addons/{{ item }}.j2"
       dest: "/etc/kubernetes/addons/{{ item }}"
+    vars:
+      nameservers: {{ nameservers.stdout }}
     loop:
       - core-dns.yaml
       - traefik.yaml
