ignore errors stopping locksmithd

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -27,6 +27,7 @@
       name: locksmithd.service
       state: stopped
       masked: yes
+    ignore_errors: yes
 
 - hosts: etcd
   user: "{{ remote_user }}"
