--- a/roles/fetch_existing_certificates/tasks/main.yml
+++ b/roles/fetch_existing_certificates/tasks/main.yml
@@ -15,6 +15,8 @@
     - front-proxy-client-key.pem
     - kube-proxy.pem
     - kube-proxy-key.pem
+    - prometheus-adapter.pem
+    - prometheus-adapter-key.pem
   vars:
     src_path: /etc/kubernetes/pki
     dest_path: target/pki
