--- a/files/kubelet-master-config.yaml
+++ b/files/kubelet-master-config.yaml
@@ -1,4 +1,4 @@
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration 
-podManifestPath: "/etc/kubernetes/manifests"
+staticPodPath: "/etc/kubernetes/manifests"
 kubeletCgroups: "/systemd/system.slice"
