Changed backup directory on nodes

--- a/etcd-backup-playbook.yaml
+++ b/etcd-backup-playbook.yaml
@@ -4,7 +4,7 @@
   tasks:
   - name: Copy the file from etcd node to jenkins
     synchronize:
-      src: "/tmp/etcd_backup/{{ ansible_date_time.date }}.tar.gz"
+      src: "/var/etcd_backup/{{ ansible_date_time.date }}.tar.gz"
       dest: "/var/lib/jenkins/etcd_backup/{{ ansible_fqdn }}_{{ ansible_date_time.date }}.tar.gz"
       mode: pull
       rsync_opts: "-e ssh -p 22"
