--- a/files/etcd/etcd-prometheus-push.service
+++ b/files/etcd/etcd-prometheus-push.service
@@ -3,4 +3,4 @@ Description=Pushes etcd metrics to prometheus
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash -c 'curl -k --cert /etc/ssl/etcd/etcd-client.pem --key /etc/ssl/etcd/etcd-client-key.pem https://$(hostname -f):2379/metrics | curl --data-binary @- https://prometheus-pushgateway.nais.$(hostname -d)/metrics/job/etcd/instance/$(hostname -f)'
+ExecStart=/bin/bash -c 'curl -k --cert /etc/ssl/etcd/etcd-client.pem --key /etc/ssl/etcd/etcd-client-key.pem https://$(hostname -f):2379/metrics | curl -k --data-binary @- https://prometheus-pushgateway.nais.$(hostname -d)/metrics/job/etcd/instance/$(hostname -f)'
