Ignore errors on timezone for now

--- a/roles/coreos_bootstrap/tasks/main.yml
+++ b/roles/coreos_bootstrap/tasks/main.yml
@@ -21,6 +21,7 @@
     - restart systemd-timesyncd
 
 - name: Setup timezone
+  ignore_errors: yes
   become: yes
   timezone:
     name: "{{ timezone }}"
