Add consul statsd exporter prometheus scrape job.

--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -140,3 +140,15 @@ scrape_configs:
         - 'prometheus.nais.{{ domain }}'
 {% endfor %}
 {% endif %}
+
+{% if consul_servers is defined %}
+  - job_name: "consul-servers"
+    honor_labels: true
+    metrics_path: '/metrics'
+    scheme: http
+    static_configs:
+      - targets:
+     {% for host in consul_servers %}
+        - '{{ host }}:9102'
+     {% endfor %}
+{% endif %}
