--- a/bigip-playbook.yaml
+++ b/bigip-playbook.yaml
@@ -29,3 +29,4 @@
       name: "{{ bigip_navtunnel_whitelist_dg }}"
       partition: "{{ bigip_partition }}"
       records_src: "bigip_dg/{{ bigip_navtunnel_whitelist_dg }}"
+      type: string
